Add changes to home intro and about

--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -22,15 +22,34 @@ layout: 'base.njk'
 </section>
 <!-- END: hero section -->
 
+<hr class="half-width-hr">
 <!-- hero section -->
 <div class="home-sub-hero">
     <div class="home-sub-hero-content">
         <!-- {# <h1 class="about-title">From roadblock to revolution</h1> #} -->
-        <h1 class="about-title">Helping women create a life without limits</h1>
+        <h1 class="sect-title about-title">Helping women create a life without limits</h1>
         <!-- {# <h2 class="sect-title fw-n">Helping women create a life without limits</h2> #} -->
     </div>
 </div>
 <!-- END: hero section -->
+<hr class="half-width-hr">
+
+<!-- stand alone testimonial -->
+<div class="testimonial-alone">
+    <div class="testimonial-alone-exert">
+        <p>
+            “Revolutionary. Motivating. Empowering. Mhairi is absolutely life-changing.”
+        </p>
+    </div>
+    <div class="testimonial-alone-author">
+        <h3 class="rob-font testimonial-author-job">
+             Natalia McHale, E-Commerce Consultant 
+        </h3>
+    </div>
+</div>
+<!-- END: stand alone testimonial -->
+
+
 
 <!-- Home about section -->
 <section class="home-about">
@@ -58,7 +77,7 @@ layout: 'base.njk'
         </p>
     </div>
     <div class="about-cta-btn">
-        <a href="about.html" class="btn-pink normal-text">READY TO BREAK BARRIERS? START HERE</a>
+        <a href="about.html" class="btn-pink normal-text">READY TO BREAK BARRIERS?<br class="d-lg-none"> START HERE</a>
     </div>
 </section>
 <!-- END: Home about section -->
