--- a/src/site/testimonials.njk
+++ b/src/site/testimonials.njk
@@ -120,7 +120,7 @@ layout: 'base.njk'
             </div>
             <div class="testimonial-exert">
                 <p>
-                    “Revolutionary, Motivating and empowering. An absolutely life changing delight.”
+                    “Revolutionary. Motivating. Empowering. Mhairi is absolutely life-changing.”
                 </p>
             </div>
             <div class="testimonial-main">
