Add new content to home page - why mhairi

--- a/src/site/includes/components/_services-parralax.njk
+++ b/src/site/includes/components/_services-parralax.njk
@@ -3,12 +3,12 @@
         <div class="parallax-container"></div>
         <div class="services-cta-content">
             <h2 class="cta-title">
-                Get ready to start living
+                Create the life you’ve been dreaming of
             </h2>
             <h3 class="cta-subtitle">
-                The life of your dreams.
+                Want to know more about how Transformational Coaching works? Let’s talk. 
             </h3>
-            <a class="btn-dark-pink services-cta-btn" href="https://app.acuityscheduling.com/schedule.php?owner=19489834&appointmentType=17193339" target="_blank">Book in your free clarity call</a>
+            <a class="btn-dark-pink services-cta-btn" href="https://app.acuityscheduling.com/schedule.php?owner=19489834&appointmentType=17193339" target="_blank">BOOK A FREE CHAT WITH ME</a>
         </div>
     </section>
     <!-- END: parralex services section -->
