--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -77,60 +77,10 @@ layout: 'base.njk'
         </p>
     </div>
     <div class="about-cta-btn">
-        <a href="about.html" class="btn-pink normal-text">READY TO BREAK BARRIERS?<br class="d-lg-none"> START HERE</a>
+        <a href="/services" class="btn-pink normal-text">READY TO BREAK BARRIERS?<br class="d-lg-none"> START HERE</a>
     </div>
 </section>
 <!-- END: Home about section -->
-
-<!-- home-coaching section -->
-<section class="home-coaching">
-    <div class="coaching-1-1">
-        <div class="coaching-img">
-            <img src="static/img/Mhairi_pics/sitting-yellow-coat.jpg" alt="mhairi-life-coach-in-yellow-coat">
-        </div>
-        <div class="coaching-text">
-            <h2 class="coaching-title">Who?</h2>
-            <p class="normal-text"> 
-                I know what you’re thinking, is coaching the right thing to help me achieve my dream life?  And if so, is Mhairi the ‘one’?  Mind Reading abilities aside these are exactly the questions you should be asking.  
-                Read more and take my quick fire quiz to find out.
-            </p>
-            <div class="coach-cta-btn">
-                <a class="btn-white-sm" href="about.html">TELL ME MORE</a>
-            </div>
-        </div>
-    </div>
-    <div class="coaching-free">
-        <div class="coaching-img">
-            <img src="static/img/Mhairi_pics/standing-at-window-scomp.jpg" alt="mhairi-life-coach-at-window">
-        </div>
-        <div class="coaching-text">
-            <h2 class="coaching-title">What?</h2>
-            <p class="normal-text p-md-0">  
-                So you’re all in on the idea of coaching but you need to know more about transformation coaching.  Specifically, what on earth it is?!
-                Get the low down on this, learn how my programs work and uncover which package would best suit you.
-            </p>
-            <div class="coach-cta-btn">
-                <a class="btn-white-sm" href="services.html">TELL ME MORE</a>
-            </div>
-        </div>
-    </div>
-    <div class="coaching-why">
-        <div class="coaching-img">
-            <img src="static/img/Mhairi_pics/sitting_laptop_blue_comp.jpg" alt="mhairi-life-coach-on-laptop">
-        </div>
-        <div class="coaching-text">
-            <h2 class="coaching-title">Why?</h2>
-            <p class="normal-text p-md-0">  
-                I’m here to make a fundamental difference in the life you lead.  You need to know if that can really happen.  Read feedback from some of my wonderful clients and find out how you too can live the life you love.
-                </p>
-            </p>
-            <div class="coach-cta-btn">
-                <a class="btn-white-sm" href="testimonials.html">TELL ME MORE</a>
-            </div>
-        </div>
-    </div>
-</section>
-<!-- END: home-coaching section -->
 
 <!-- you will gain section -->
 <section class="home-you-will-gain">
@@ -220,6 +170,46 @@ layout: 'base.njk'
 <!-- END: you will gain section -->
 
 {% include 'components/_services-parralax.njk' %}
+
+<!-- why mhairi section -->
+<section class="why-mhairi">
+    <div class="why-mhairi-title">
+        <h3 class="sect-title rob-font">
+            Why Mhairi
+        </h3>
+    </div>
+    <div class="why-mhairi-content">
+        <div class="home-about-title">
+            <h2 class="home-about-subtitle">
+            Choosing the right coach for you is an important step in the process, I get it. So why me? 
+            </h2>
+        </div>
+        <div class="home-about-img">
+            <img src="static/img/Mhairi_pics/walking-away.jpg" alt="mhairi-life-coach-walking-away">
+        </div>
+        <div class="home-about-text">
+            <p class="sect-subtitle pink-text">
+                I’ve been where you are:
+            </p>
+            <p class="normal-text">
+                I worked for many years in senior roles with fancy job titles and salaries, but I was never truly fulfilled. After completing a degree in Medical Biology, I knew my passion lived outside the lab. But what to do? Youthful ignorance firmly in hand, I gravitated to where I thought I ‘should’ be, led entirely by society’s depiction of success. When I got there, I realised I’d been so busy becoming what I thought I should be, that I’d completely lost touch with who I actually wanted to be. What changed my world? 
+            </p>
+            <p class="normal-text">
+                Complete disaster.
+            </p>
+            <p class="normal-text">
+                And that’s where my life-changing transformation began. I emerged as my best self, and I can help you do the same.
+            </p>
+            <p class="normal-text">
+                Read more about my journey to happiness and discover how I can help you with yours.
+            </p>
+        </div>
+        <div class="about-cta-btn">
+            <a href="/about" class="btn-pink normal-text">READ MY STORY</a>
+        </div>
+    </div>
+</section>
+<!-- END: why mhairi section -->
 
 {% include 'components/_quiz.njk' %}
 
