--- a/static/css/main.css
+++ b/static/css/main.css
@@ -2006,6 +2006,7 @@ a:focus {
 
 @media only screen and (min-width: 768px) {
   .about-cta-btn {
+    padding: .4em 1em;
     width: auto;
   }
 }
@@ -3310,7 +3311,7 @@ input[type='checkbox'] {
 @media only screen and (min-width: 768px) and (max-width: 991px) {
   .home-sub-hero {
     width: 33em;
-    margin: 3em auto 2em auto;
+    margin: 2em auto 2em auto;
   }
 }
 
@@ -3950,8 +3951,13 @@ input[type='checkbox'] {
 
 .home-you-will-gain {
   text-align: center;
-  background-color: #f0f3f3;
   padding: 1em 0 2em 0;
+}
+
+@media only screen and (min-width: 768px) {
+  .home-you-will-gain {
+    background-color: #f0f3f3;
+  }
 }
 
 .home-gain-heading {
@@ -4335,6 +4341,143 @@ input[type='checkbox'] {
   }
   .quote .quote-author {
     font-size: .6em;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .why-mhairi {
+    margin: 3em 0;
+  }
+}
+
+.why-mhairi-title {
+  text-align: center;
+  margin: 2em 0;
+}
+
+.why-mhairi-content {
+  margin-top: 0;
+  padding-bottom: 4em;
+  text-align: center;
+}
+
+@media only screen and (min-width: 500px) and (max-width: 767px) {
+  .why-mhairi-content {
+    margin-top: 2em;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .why-mhairi-content {
+    background-color: white;
+    height: 31.5em;
+    padding-bottom: 0;
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: auto 25em 2em 16em auto;
+        grid-template-columns: auto 25em 2em 16em auto;
+    -ms-grid-rows: 4em 19em auto;
+        grid-template-rows: 4em 19em auto;
+  }
+}
+
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+  .why-mhairi-content {
+    -ms-grid-columns: auto 25em 2em 16em auto;
+        grid-template-columns: auto 25em 2em 16em auto;
+    height: 29em;
+  }
+}
+
+@media only screen and (min-width: 1200px), only screen and (min-width: 1600px) {
+  .why-mhairi-content {
+    height: 25em;
+  }
+}
+
+@media only screen and (min-width: 1600px) {
+  .why-mhairi-content {
+    height: 25em;
+    -ms-grid-rows: 4em 16em auto;
+        grid-template-rows: 4em 16em auto;
+  }
+}
+
+.why-mhairi-content .home-about-title {
+  padding-top: 0;
+}
+
+@media only screen and (min-width: 768px) {
+  .why-mhairi-content .home-about-title {
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 1;
+    grid-column: 2/3;
+    -ms-grid-row: 1;
+    grid-row: 1/1;
+    text-align: start;
+    padding: 0 0 0 1em;
+  }
+}
+
+.why-mhairi-content .home-about-img {
+  width: 90vw;
+}
+
+@media only screen and (min-width: 768px) {
+  .why-mhairi-content .home-about-img {
+    width: 100%;
+    height: 100%;
+    -ms-grid-column: 4;
+    -ms-grid-column-span: 1;
+    grid-column: 4/5;
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 4;
+    grid-row: 1/5;
+  }
+}
+
+.why-mhairi-content .home-about-text {
+  margin: 3em auto;
+}
+
+@media only screen and (min-width: 768px) {
+  .why-mhairi-content .home-about-text {
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 1;
+    grid-column: 2/3;
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    grid-row: 2/3;
+    margin: 1em auto 0 auto;
+    text-align: start;
+    padding: 0 0 0 1.5em;
+  }
+}
+
+@media only screen and (min-width: 992px) and (max-width: 1199px), only screen and (min-width: 1200px) {
+  .why-mhairi-content .home-about-text {
+    margin: 0 auto;
+  }
+}
+
+.why-mhairi-content .home-about-text .sect-subtitle {
+  margin: 0 auto 2em auto;
+}
+
+@media only screen and (min-width: 992px) and (max-width: 1199px), only screen and (min-width: 1200px) {
+  .why-mhairi-content .home-about-text .sect-subtitle {
+    margin: 1em auto 2em auto;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .why-mhairi-content .about-cta-btn {
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 1;
+    grid-column: 2/3;
+    -ms-grid-row: 3;
+    grid-row: 3/3;
+    margin: auto;
   }
 }
 
@@ -6342,7 +6485,7 @@ input[type='checkbox'] {
 
 .services-cta {
   position: relative;
-  height: 25em;
+  height: 32em;
   background-image: url("../img/Mhairi_pics/patio_sitting_comp.jpg");
   background-position: center;
   background-size: cover;
@@ -6431,7 +6574,7 @@ input[type='checkbox'] {
   text-align: center;
   color: white;
   width: 23em;
-  height: 17em;
+  height: 25em;
   margin: auto;
   position: absolute;
   top: 0;
@@ -6442,7 +6585,7 @@ input[type='checkbox'] {
 
 @media only screen and (min-width: 500px) and (max-width: 767px) {
   .services-cta-content {
-    height: 11em;
+    height: 16em;
     width: 28em;
   }
 }
@@ -6450,24 +6593,28 @@ input[type='checkbox'] {
 @media only screen and (min-width: 768px) and (max-width: 991px) {
   .services-cta-content {
     height: 11em;
+    width: 35em;
   }
 }
 
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
   .services-cta-content {
-    height: 9em;
+    height: 10em;
+    width: 33em;
   }
 }
 
 @media only screen and (min-width: 1200px) {
   .services-cta-content {
-    height: 7em;
+    width: 28em;
+    height: 9em;
   }
 }
 
 @media only screen and (min-width: 1600px) {
   .services-cta-content {
-    height: 5.5em;
+    height: 7.5em;
+    width: 28em;
   }
 }
 
@@ -6733,7 +6880,7 @@ input[type='checkbox'] {
 @media only screen and (min-width: 768px) and (max-width: 991px) {
   .home-sub-hero {
     width: 33em;
-    margin: 3em auto 2em auto;
+    margin: 2em auto 2em auto;
   }
 }
 
@@ -7373,8 +7520,13 @@ input[type='checkbox'] {
 
 .home-you-will-gain {
   text-align: center;
-  background-color: #f0f3f3;
   padding: 1em 0 2em 0;
+}
+
+@media only screen and (min-width: 768px) {
+  .home-you-will-gain {
+    background-color: #f0f3f3;
+  }
 }
 
 .home-gain-heading {
@@ -7758,6 +7910,143 @@ input[type='checkbox'] {
   }
   .quote .quote-author {
     font-size: .6em;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .why-mhairi {
+    margin: 3em 0;
+  }
+}
+
+.why-mhairi-title {
+  text-align: center;
+  margin: 2em 0;
+}
+
+.why-mhairi-content {
+  margin-top: 0;
+  padding-bottom: 4em;
+  text-align: center;
+}
+
+@media only screen and (min-width: 500px) and (max-width: 767px) {
+  .why-mhairi-content {
+    margin-top: 2em;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .why-mhairi-content {
+    background-color: white;
+    height: 31.5em;
+    padding-bottom: 0;
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: auto 25em 2em 16em auto;
+        grid-template-columns: auto 25em 2em 16em auto;
+    -ms-grid-rows: 4em 19em auto;
+        grid-template-rows: 4em 19em auto;
+  }
+}
+
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+  .why-mhairi-content {
+    -ms-grid-columns: auto 25em 2em 16em auto;
+        grid-template-columns: auto 25em 2em 16em auto;
+    height: 29em;
+  }
+}
+
+@media only screen and (min-width: 1200px), only screen and (min-width: 1600px) {
+  .why-mhairi-content {
+    height: 25em;
+  }
+}
+
+@media only screen and (min-width: 1600px) {
+  .why-mhairi-content {
+    height: 25em;
+    -ms-grid-rows: 4em 16em auto;
+        grid-template-rows: 4em 16em auto;
+  }
+}
+
+.why-mhairi-content .home-about-title {
+  padding-top: 0;
+}
+
+@media only screen and (min-width: 768px) {
+  .why-mhairi-content .home-about-title {
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 1;
+    grid-column: 2/3;
+    -ms-grid-row: 1;
+    grid-row: 1/1;
+    text-align: start;
+    padding: 0 0 0 1em;
+  }
+}
+
+.why-mhairi-content .home-about-img {
+  width: 90vw;
+}
+
+@media only screen and (min-width: 768px) {
+  .why-mhairi-content .home-about-img {
+    width: 100%;
+    height: 100%;
+    -ms-grid-column: 4;
+    -ms-grid-column-span: 1;
+    grid-column: 4/5;
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 4;
+    grid-row: 1/5;
+  }
+}
+
+.why-mhairi-content .home-about-text {
+  margin: 3em auto;
+}
+
+@media only screen and (min-width: 768px) {
+  .why-mhairi-content .home-about-text {
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 1;
+    grid-column: 2/3;
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    grid-row: 2/3;
+    margin: 1em auto 0 auto;
+    text-align: start;
+    padding: 0 0 0 1.5em;
+  }
+}
+
+@media only screen and (min-width: 992px) and (max-width: 1199px), only screen and (min-width: 1200px) {
+  .why-mhairi-content .home-about-text {
+    margin: 0 auto;
+  }
+}
+
+.why-mhairi-content .home-about-text .sect-subtitle {
+  margin: 0 auto 2em auto;
+}
+
+@media only screen and (min-width: 992px) and (max-width: 1199px), only screen and (min-width: 1200px) {
+  .why-mhairi-content .home-about-text .sect-subtitle {
+    margin: 1em auto 2em auto;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .why-mhairi-content .about-cta-btn {
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 1;
+    grid-column: 2/3;
+    -ms-grid-row: 3;
+    grid-row: 3/3;
+    margin: auto;
   }
 }
 
