Add content changes to quiz

--- a/src/site/includes/components/_quiz.njk
+++ b/src/site/includes/components/_quiz.njk
@@ -13,7 +13,7 @@
                     Find out if coaching is for you in less than 60 seconds
                 </h4>
                 <div class="quiz-cta">
-                    <a id="quizIntroBtn" href="" class="quiz-cta-btn btn-black normal-text">Tell me more</a>
+                    <a id="quizIntroBtn" href="" class="quiz-cta-btn btn-black normal-text">LET’S GO</a>
                 </div>
             </div>  
         </div>
@@ -24,9 +24,7 @@
                 The coaching <span class="logo-font">quiz</span>
             </h2>
             <p id="quizIntroText" class="quiz-content-main normal-text">
-                Believe it or not, Transformation coaching is not for everyone. There are some 
-                who would really benefit from a coach, but they just aren't ready to make the changes to better their lives. 
-                Take this quick quiz to see if Transformation Coaching is right for you right now. 
+                Transformation Coaching is not for everyone. Some really benefit from having guidance in creating their dreams lives, and some aren’t ready to take those steps yet - and that’s ok! Take this quick quiz below to see if you’re ready for Transformation Coaching and if I’m the right coach for you. 
             </p>
             <div class="quiz-cta">
                 <a id="quizStart" href="" target="_blank" class="quiz-cta-btn btn-black normal-text">Take the quiz</a>
