--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -43,7 +43,7 @@ layout: 'base.njk'
     </div>
     <div class="testimonial-alone-author">
         <h3 class="rob-font testimonial-author-job">
-             Natalia McHale, E-Commerce Consultant 
+            - Natalia McHale, E-Commerce Consultant 
         </h3>
     </div>
 </div>
@@ -210,6 +210,24 @@ layout: 'base.njk'
     </div>
 </section>
 <!-- END: why mhairi section -->
+
+<hr class="half-width-hr">
+
+<!-- stand alone testimonial -->
+<div class="testimonial-alone">
+    <div class="testimonial-alone-exert">
+        <p>
+            “Mhairi really helped me gain more confidence. If I ever feel overwhelmed, I just go back to my sessions with her.”
+        </p>
+    </div>
+    <div class="testimonial-alone-author">
+        <h3 class="rob-font testimonial-author-job">
+              - Kate Towse, Customer Experience Team Lead 
+        </h3>
+    </div>
+</div>
+<!-- END: stand alone testimonial -->
+<hr class="half-width-hr">
 
 {% include 'components/_quiz.njk' %}
 
