Add more content client love

--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -42,7 +42,7 @@ layout: 'base.njk'
         </p>
     </div>
     <div class="testimonial-alone-author">
-        <h3 class="rob-font testimonial-author-job">
+        <h3 class="rob-font testimonial-alone-author-job">
             - Natalia McHale, E-Commerce Consultant 
         </h3>
     </div>
@@ -221,7 +221,7 @@ layout: 'base.njk'
         </p>
     </div>
     <div class="testimonial-alone-author">
-        <h3 class="rob-font testimonial-author-job">
+        <h3 class="rob-font testimonial-alone-author-job">
               - Kate Towse, Customer Experience Team Lead 
         </h3>
     </div>
@@ -231,15 +231,29 @@ layout: 'base.njk'
 
 {% include 'components/_quiz.njk' %}
 
-<!-- Parralex quote section -->
-<section class="quote-parallax-container">
-    <div class="quote">
-        <h3 class="sect-subtitle">
-            Client love
-        </h3>
-        <p class="quote-text">
-            “Revolutionary, Motivating and empowering. An absolutely life changing delight.”
-        </p>
+
+<!-- stand alone testimonial -->
+<div class="testimonial-alone">
+    <h3 class="sect-title">
+            Client love 
+    </h3>
+    <h3 class="sect-subtitle">
+            Hear from the women who have changed their lives
+    </h3>
+    <div class="testimonial-alone-content">
+        <div class="testimonial-alone-exert">
+            <p>
+                “Mhairi was hugely inspirational and made me realise I can do anything I set my mind to ”
+            </p>
+        </div>
+        <div class="testimonial-alone-author">
+            <h3 class="rob-font testimonial-alone-author-job">
+                - Jo Christie, Travel Retail Manager U.K. and Ireland
+            </h3>
+        </div>
     </div>
-</section>
-<!-- END: parralex quote section -->
+     <a class="btn-dark-pink services-cta-btn" href="/testimonials">MORE SUCCESS STORIES </a>
+</div>
+<!-- END: stand alone testimonial -->
+<hr class="half-width-hr">
+       
