--- a/static/css/main.css
+++ b/static/css/main.css
@@ -647,7 +647,7 @@ template {
 }
 
 .quote-text {
-  color: #f58c7c;
+  color: #aa9659;
   font-weight: 400;
 }
 
@@ -3381,6 +3381,12 @@ input[type='checkbox'] {
   text-align: center;
 }
 
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .testimonial-alone {
+    width: 70vw;
+  }
+}
+
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
   .testimonial-alone {
     width: 38em;
@@ -3389,31 +3395,53 @@ input[type='checkbox'] {
   }
 }
 
-.testimonial-alone .testimonial-author-job {
+.testimonial-alone-author-job {
   font-size: 1.1em;
 }
 
+@media only screen and (min-width: 500px) and (max-width: 767px) {
+  .testimonial-alone-author-job {
+    font-size: 1em;
+  }
+}
+
 @media only screen and (min-width: 768px) and (max-width: 991px) {
-  .testimonial-alone .testimonial-author-job {
-    font-size: .9em;
+  .testimonial-alone-author-job {
+    font-size: .8em;
   }
 }
 
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
-  .testimonial-alone .testimonial-author-job {
+  .testimonial-alone-author-job {
     font-size: .7em;
   }
 }
 
 @media only screen and (min-width: 1200px) {
-  .testimonial-alone .testimonial-author-job {
-    font-size: .85em;
+  .testimonial-alone-author-job {
+    font-size: .7em;
   }
 }
 
 @media only screen and (min-width: 1600px) {
-  .testimonial-alone .testimonial-author-job {
+  .testimonial-alone-author-job {
     font-size: .65em;
+  }
+}
+
+.testimonial-alone-content {
+  margin: 3em 0 4em 0;
+}
+
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+  .testimonial-alone-content {
+    margin: 2em 0;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .testimonial-alone-content {
+    margin: 3em 0 2em 0;
   }
 }
 
@@ -3421,7 +3449,7 @@ input[type='checkbox'] {
   width: 90%;
   color: #aa9659;
   text-align: center;
-  margin: 2em auto;
+  margin: 2em auto 1em auto;
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
@@ -3462,7 +3490,7 @@ input[type='checkbox'] {
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
   .testimonial-alone-exert p {
-    font-size: 1.1em;
+    font-size: 1.2em;
   }
 }
 
@@ -3474,13 +3502,13 @@ input[type='checkbox'] {
 
 @media only screen and (min-width: 1200px) {
   .testimonial-alone-exert p {
-    font-size: 1.4em;
+    font-size: 1.1em;
   }
 }
 
 @media only screen and (min-width: 1600px) {
   .testimonial-alone-exert p {
-    font-size: 1.2em;
+    font-size: 1.1em;
   }
 }
 
@@ -4250,6 +4278,12 @@ input[type='checkbox'] {
   background: white;
 }
 
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+  .quote .sect-subtitle {
+    margin: .4em auto;
+  }
+}
+
 .quote .quote-text {
   font-size: 1.2em;
   margin: 0.6em .6em 0 .6em;
@@ -4315,7 +4349,7 @@ input[type='checkbox'] {
   .quote {
     height: 11em;
     width: 32em;
-    padding: 2em 3em;
+    padding: .5em;
   }
   .quote .quote-author {
     font-size: .6em;
@@ -4376,8 +4410,8 @@ input[type='checkbox'] {
     display: grid;
     -ms-grid-columns: auto 25em 2em 16em auto;
         grid-template-columns: auto 25em 2em 16em auto;
-    -ms-grid-rows: 4em 19em auto;
-        grid-template-rows: 4em 19em auto;
+    -ms-grid-rows: 4em 23em auto;
+        grid-template-rows: 4em 23em auto;
   }
 }
 
@@ -4385,6 +4419,8 @@ input[type='checkbox'] {
   .why-mhairi-content {
     -ms-grid-columns: auto 25em 2em 16em auto;
         grid-template-columns: auto 25em 2em 16em auto;
+    -ms-grid-rows: 4em 20em auto;
+        grid-template-rows: 4em 20em auto;
     height: 29em;
   }
 }
@@ -4392,6 +4428,8 @@ input[type='checkbox'] {
 @media only screen and (min-width: 1200px), only screen and (min-width: 1600px) {
   .why-mhairi-content {
     height: 25em;
+    -ms-grid-rows: 4em 18em auto;
+        grid-template-rows: 4em 18em auto;
   }
 }
 
@@ -6625,7 +6663,7 @@ input[type='checkbox'] {
   display: inline-block;
   margin: auto;
   bottom: 0;
-  padding: .7em 1.5em;
+  padding: .5em 1.5em;
 }
 
 @media only screen and (min-width: 500px) and (max-width: 767px) {
@@ -6950,6 +6988,12 @@ input[type='checkbox'] {
   text-align: center;
 }
 
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .testimonial-alone {
+    width: 70vw;
+  }
+}
+
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
   .testimonial-alone {
     width: 38em;
@@ -6958,31 +7002,53 @@ input[type='checkbox'] {
   }
 }
 
-.testimonial-alone .testimonial-author-job {
+.testimonial-alone-author-job {
   font-size: 1.1em;
 }
 
+@media only screen and (min-width: 500px) and (max-width: 767px) {
+  .testimonial-alone-author-job {
+    font-size: 1em;
+  }
+}
+
 @media only screen and (min-width: 768px) and (max-width: 991px) {
-  .testimonial-alone .testimonial-author-job {
-    font-size: .9em;
+  .testimonial-alone-author-job {
+    font-size: .8em;
   }
 }
 
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
-  .testimonial-alone .testimonial-author-job {
+  .testimonial-alone-author-job {
     font-size: .7em;
   }
 }
 
 @media only screen and (min-width: 1200px) {
-  .testimonial-alone .testimonial-author-job {
-    font-size: .85em;
+  .testimonial-alone-author-job {
+    font-size: .7em;
   }
 }
 
 @media only screen and (min-width: 1600px) {
-  .testimonial-alone .testimonial-author-job {
+  .testimonial-alone-author-job {
     font-size: .65em;
+  }
+}
+
+.testimonial-alone-content {
+  margin: 3em 0 4em 0;
+}
+
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+  .testimonial-alone-content {
+    margin: 2em 0;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .testimonial-alone-content {
+    margin: 3em 0 2em 0;
   }
 }
 
@@ -6990,7 +7056,7 @@ input[type='checkbox'] {
   width: 90%;
   color: #aa9659;
   text-align: center;
-  margin: 2em auto;
+  margin: 2em auto 1em auto;
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
@@ -7031,7 +7097,7 @@ input[type='checkbox'] {
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
   .testimonial-alone-exert p {
-    font-size: 1.1em;
+    font-size: 1.2em;
   }
 }
 
@@ -7043,13 +7109,13 @@ input[type='checkbox'] {
 
 @media only screen and (min-width: 1200px) {
   .testimonial-alone-exert p {
-    font-size: 1.4em;
+    font-size: 1.1em;
   }
 }
 
 @media only screen and (min-width: 1600px) {
   .testimonial-alone-exert p {
-    font-size: 1.2em;
+    font-size: 1.1em;
   }
 }
 
@@ -7819,6 +7885,12 @@ input[type='checkbox'] {
   background: white;
 }
 
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+  .quote .sect-subtitle {
+    margin: .4em auto;
+  }
+}
+
 .quote .quote-text {
   font-size: 1.2em;
   margin: 0.6em .6em 0 .6em;
@@ -7884,7 +7956,7 @@ input[type='checkbox'] {
   .quote {
     height: 11em;
     width: 32em;
-    padding: 2em 3em;
+    padding: .5em;
   }
   .quote .quote-author {
     font-size: .6em;
@@ -7945,8 +8017,8 @@ input[type='checkbox'] {
     display: grid;
     -ms-grid-columns: auto 25em 2em 16em auto;
         grid-template-columns: auto 25em 2em 16em auto;
-    -ms-grid-rows: 4em 19em auto;
-        grid-template-rows: 4em 19em auto;
+    -ms-grid-rows: 4em 23em auto;
+        grid-template-rows: 4em 23em auto;
   }
 }
 
@@ -7954,6 +8026,8 @@ input[type='checkbox'] {
   .why-mhairi-content {
     -ms-grid-columns: auto 25em 2em 16em auto;
         grid-template-columns: auto 25em 2em 16em auto;
+    -ms-grid-rows: 4em 20em auto;
+        grid-template-rows: 4em 20em auto;
     height: 29em;
   }
 }
@@ -7961,6 +8035,8 @@ input[type='checkbox'] {
 @media only screen and (min-width: 1200px), only screen and (min-width: 1600px) {
   .why-mhairi-content {
     height: 25em;
+    -ms-grid-rows: 4em 18em auto;
+        grid-template-rows: 4em 18em auto;
   }
 }
 
