--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -15,9 +15,6 @@ layout: 'base.njk'
     <div class="home-hero-text">
         <p class="hero-text first-hero-text" data-aos="fade-right" data-aos-delay="500" data-aos-duration="1500">From roadblock</p>
         <p class="hero-text second-hero-text" data-aos="fade-left" data-aos-delay="1000" data-aos-offset="200" data-aos-duration="1500">to revolution</p>
-        <!-- <p class="hero-text third-hero-text" data-aos="fade-right" data-aos-delay="2000" data-aos-offset="200" data-aos-duration="1500">helping women create</p>
-        <p class="hero-text third-hero-text" data-aos="fade-right" data-aos-delay="2000" data-aos-offset="200" data-aos-duration="1500">a life without limits
-        </p> -->
     </div>
 </section>
 <!-- END: hero section -->
@@ -26,9 +23,7 @@ layout: 'base.njk'
 <!-- hero section -->
 <div class="home-sub-hero">
     <div class="home-sub-hero-content">
-        <!-- {# <h1 class="about-title">From roadblock to revolution</h1> #} -->
         <h1 class="sect-title about-title">Helping women create a life without limits</h1>
-        <!-- {# <h2 class="sect-title fw-n">Helping women create a life without limits</h2> #} -->
     </div>
 </div>
 <!-- END: hero section -->
@@ -48,8 +43,6 @@ layout: 'base.njk'
     </div>
 </div>
 <!-- END: stand alone testimonial -->
-
-
 
 <!-- Home about section -->
 <section class="home-about">
@@ -232,7 +225,7 @@ layout: 'base.njk'
 {% include 'components/_quiz.njk' %}
 
 
-<!-- stand alone testimonial -->
+<!-- Client love section -->
 <div class="testimonial-alone">
     <h3 class="sect-title">
             Client love 
@@ -254,6 +247,6 @@ layout: 'base.njk'
     </div>
      <a class="btn-dark-pink services-cta-btn" href="/testimonials">MORE SUCCESS STORIES </a>
 </div>
-<!-- END: stand alone testimonial -->
+<!-- END: Client love section -->
 <hr class="half-width-hr">
        
