Edit testimonial margins

--- a/src/site/includes/base.njk
+++ b/src/site/includes/base.njk
@@ -101,7 +101,7 @@
                         Follow me on Instagram for fun, free resources, wise words and inspiration. 
                     </h3>
                     <p class="normal-text">
-                        Or pretty pictures at the very least! 
+                       (Or pretty pictures and a few laughs at the very least!)
                     </p>
                     <div class="about-cta-btn cf-button">
                         <a href="https://www.instagram.com/theroadblockcoach/?hl=en" target="_blank" class="btn-pink normal-text">Join my tribe!</a>
