--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -248,5 +248,5 @@ layout: 'base.njk'
      <a class="btn-dark-pink services-cta-btn" href="/testimonials">MORE SUCCESS STORIES </a>
 </div>
 <!-- END: Client love section -->
-<hr class="half-width-hr">
+<hr class="half-width-hr d-none d-md-block">
        
